# rational_sieve

./: CMakeLists.txt
src/: runner.cpp
src/lib/: congruence.cpp  sieve.cpp  utils.cpp
